feat(professores): adiciona crud de professores e service

--- a/src/app/curso/curso-adicionar/curso-adicionar.component.html
+++ b/src/app/curso/curso-adicionar/curso-adicionar.component.html
@@ -4,17 +4,17 @@
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <label class="form-label">Nome</label>
-            <input class="form-control" name="nome" [(ngModel)]="curso.nome" #nome="ngModel" required/>
+            <input class="form-control" name="nome" [(ngModel)]="curso.nome" #nome="ngModel" required />
             <div class="text-danger" *ngIf="nome.invalid && nome.touched">
                 <span *ngIf="nome.errors?.['required']">O nome é obrigatório.</span>
-                <span *ngIf="nome.errors?.['maxlength']">O nome pode ter no máximo 50 caracteres.</span>            
-            </div>              
+                <span *ngIf="nome.errors?.['maxlength']">O nome pode ter no máximo 50 caracteres.</span>
+            </div>
         </div>
-    </div>    
+    </div>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <label class="form-label">Descrição</label>
-            <input class="form-control" name="descricao" [(ngModel)]="curso.descricao"/>
+            <input class="form-control" name="descricao" [(ngModel)]="curso.descricao" />
         </div>
     </div>
     <div class="row">
@@ -22,21 +22,22 @@
             <label class="form-label">Período</label>
             <select name="periodo" class="form-select" [(ngModel)]="curso.periodo" #periodo="ngModel" required>
                 @for (periodo of periodos; track $index) {
-                    <option [ngValue]="periodo.id">{{ periodo.descricao }}</option>
+                <option [ngValue]="periodo.id">{{ periodo.descricao }}</option>
                 }
             </select>
             <div class="text-danger" *ngIf="periodo.invalid && periodo.touched">
                 Período é obrigatório.
-            </div>               
+            </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <label class="form-label">Carga Horária</label>
-            <input class="form-control" name="cargaHoraria" [(ngModel)]="curso.cargaHoraria" type="number" required/>
+            <input class="form-control" name="cargaHoraria" [(ngModel)]="curso.cargaHoraria" type="number" required />
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <label class="form-label">Qtde Máxima de ALunos</label>
-            <input class="form-control" name="quantidadeMaximaAlunos" [(ngModel)]="curso.quantidadeMaximaAlunos" type="number" required/>
-        </div>        
+            <input class="form-control" name="quantidadeMaximaAlunos" [(ngModel)]="curso.quantidadeMaximaAlunos"
+                type="number" required />
+        </div>
     </div>
     <hr>
     <div class="text-center">
@@ -50,14 +51,3 @@
         </button>
     </div>
 </form>
-
-
-
-<!-- 
-"nome": "string",
-"descricao": "string",
-
-"periodo": "Manha",
-"cargaHoraria": 0,
-"quantidadeMaximaAlunos": 0 
--->
