--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,48 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="#">
       <i class="fa-solid fa-city"></i>
       Unimar
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
+
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Curso
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            🎓 Cursos
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu shadow">
             <li>
-              <a class="dropdown-item" routerLink="curso/listar" >
-                <i class="fa-solid fa-book"></i>
-                Listar
+              <a class="dropdown-item d-flex align-items-center gap-2" routerLink="curso/listar">
+                <i class="fa-solid fa-list"></i> Listar
               </a>
             </li>
             <li>
-              <a class="dropdown-item" routerLink="curso/adicionar">
-                <i class="fa-solid fa-circle-plus"></i>
-                Adicionar
+              <a class="dropdown-item d-flex align-items-center gap-2" routerLink="curso/adicionar">
+                <i class="fa-solid fa-plus"></i> Adicionar
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            👨‍🏫 Professores
+          </a>
+          <ul class="dropdown-menu shadow">
+            <li>
+              <a class="dropdown-item d-flex align-items-center gap-2" routerLink="professor/listar">
+                <i class="fa-solid fa-list"></i> Listar
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item d-flex align-items-center gap-2" routerLink="professor/adicionar">
+                <i class="fa-solid fa-plus"></i> Adicionar
               </a>
             </li>
           </ul>
@@ -32,6 +51,7 @@
     </div>
   </div>
 </nav>
-<div class="container">
+
+<div class="container mt-5 pt-4">
   <router-outlet></router-outlet>
 </div>
