--- a/src/app/professor/professor-listar/professor-listar.component.html
+++ b/src/app/professor/professor-listar/professor-listar.component.html
@@ -1,41 +1,43 @@
-<h3>Listagem de Professores</h3>
-<div class="d-flex">
-    <input type="text" [(ngModel)]="filtro" (input)="filtrarProfessores()" class="form-control me-2"
-        placeholder="Digite para filtrar..." />
-    <a class="btn btn-primary" routerLink="/professor/adicionar" style="width: 150px;">
-        <i class="fa-solid fa-circle-plus"></i>
-        Novo Professor
-    </a>
+<div class="container mt-4">
+    <h3 class="mb-3 text-primary">Listagem de Professores</h3>
+
+    <div class="d-flex flex-column flex-md-row align-items-center mb-3 gap-2">
+        <input type="text" [(ngModel)]="filtro" (input)="filtrarProfessores()" class="form-control shadow-sm rounded"
+            placeholder="Digite para filtrar..." />
+        <a class="btn btn-primary d-flex align-items-center gap-2 px-3" routerLink="/professor/adicionar"
+            style="width: 190px;">
+            <i class="fa-solid fa-circle-plus"></i> Novo Professor
+        </a>
+    </div>
+
+    <div class="table-responsive">
+        <table class="table table-striped table-hover shadow-sm rounded overflow-hidden">
+            <thead class="table-dark">
+                <tr>
+                    <th>Nome</th>
+                    <th>Biografia</th>
+                    <th class="text-center" style="width: 25%;">Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (professor of professoresFiltrados; track $index) {
+                <tr>
+                    <td>{{ professor.nome }}</td>
+                    <td>{{ professor.biografia }}</td>
+                    <td class="text-center d-flex justify-content-center gap-2">
+                        <a [routerLink]="['/professor/editar', professor.id]" class="btn btn-secondary btn-sm">
+                            <i class="fa-regular fa-pen-to-square"></i> Editar
+                        </a>
+                        <button class="btn btn-warning btn-sm" (click)="editar(professor.id)">
+                            <i class="fa-solid fa-pencil"></i> Editar TS
+                        </button>
+                        <button class="btn btn-danger btn-sm" (click)="removerProfessor(professor.id)">
+                            <i class="fa-solid fa-trash-can"></i> Excluir
+                        </button>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
-<hr>
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Biografia</th>
-            <th class="center" style="width: 25%;">Ações</th>
-        </tr>
-    </thead>
-    <tbody>
-        @for (professor of professoresFiltrados; track $index) {
-        <tr>
-            <td>{{ professor.nome }}</td>
-            <td>{{ professor.biografia }}</td>
-            <td class="center">
-                <a [routerLink]="['/professor/editar', professor.id]" class="btn btn-secondary btn-sm mr-5">
-                    <i class="fa-regular fa-pen-to-square"></i>
-                    Editar
-                </a>
-                <button class="btn btn-secondary btn-sm mr-5" (click)="editar(professor.id)">
-                    <i class="fa-solid fa-pencil"></i>
-                    Editar via TS
-                </button>
-                <button class="btn btn-danger btn-sm" (click)="removerProfessor(professor.id)">
-                    <i class="fa-solid fa-trash-can"></i>
-                    Excluir
-                </button>
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
